Tests update